修正 Docker Compose 中的 Gunicorn 命令，將應用程式名稱從 app_optimized 更改為 app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     networks:
       - app-network
     # 使用 Gunicorn 作為 WSGI 服務器
-    command: gunicorn --config gunicorn.conf.py app_optimized:app
+    command: gunicorn --config gunicorn.conf.py app:app
     # command: sleep 1000000000
     deploy:
       resources:
